// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToDoComponent Snapshot with empty list 1`] = `
<Fragment>
  <CardComponent>
    <styled.h1>
      ToDo
    </styled.h1>
    <EmptyComponent />
  </CardComponent>
  <styled.div>
    <CircleButtonComponent
      onClick={[Function]}
    />
  </styled.div>
  <ModalComponent
    onClose={[Function]}
    open={false}
  >
    <ModalTodo
      onChangeInput={[Function]}
      onSave={[Function]}
      values={
        Object {
          "description": "",
          "id": 0,
          "title": "",
        }
      }
    />
  </ModalComponent>
</Fragment>
`;

exports[`ToDoComponent Snapshot with list 1`] = `
<Fragment>
  <CardComponent>
    <styled.h1>
      ToDo
    </styled.h1>
    <GridComponent>
      <GridItem
        description="description"
        handleEdit={[Function]}
        handleRemove={[Function]}
        key="asd"
        title="title"
      />
    </GridComponent>
  </CardComponent>
  <styled.div>
    <CircleButtonComponent
      onClick={[Function]}
    />
  </styled.div>
  <ModalComponent
    onClose={[Function]}
    open={false}
  >
    <ModalTodo
      onChangeInput={[Function]}
      onSave={[Function]}
      values={
        Object {
          "description": "",
          "id": 0,
          "title": "",
        }
      }
    />
  </ModalComponent>
</Fragment>
`;
